--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
   <div class="carousel-inner">
     <div class="carousel-item active container-fluid">
 
-          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <h2 class="testimonial-text">This is the ultimate place for your dog.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-          <em>Pebbles, New York</em>
+          <em>London</em>
     </div>
     <div class="carousel-item container-fluid">
       <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
       <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-      <em>Beverly, Illinois</em>
+      <em>Beverly, New York</em>
     </div>
 
   </div>
@@ -152,7 +152,7 @@
 
     <div class="card">
     <div class="card-header">
-          <h3>Chihuahua</h3>
+          <h3>Poodle</h3>
     </div>
     <div class="card-body">
       <h2 class="price-list">Free</h2>
@@ -183,7 +183,7 @@
     <div class="pricing-column col-lg-4">
       <div class="card">
       <div class="card-header">
-            <h3>Mastiff</h3>
+            <h3>Bulldog</h3>
       </div>
       <div class="card-body">
 
